# def

./: .gitignore  README.md  build.gradle  localdeployment.sh  settings.gradle
base-datatypes/: build.gradle  gen.bat  gen.sh
base-routines/: CMakeLists.txt  RoutineCommunication_constants.cpp  RoutineCommunication_constants.h  RoutineCommunication_types.cpp  RoutineCommunication_types.h  defaultMapper.cpp  defaultStorer.cpp
client-api/: build.gradle
client-routine-worker/: build.gradle
client-routine-worker-api/: ClientRoutineService.thrift  build.gradle
cloud-communication/: build.gradle
cloud-communication-api/: CloudCommunicationDTOs.thrift  CloudCommunicationService.thrift  build.gradle  gen.sh
cluster/: build.gradle
cluster-api/: ClusterService.thrift  build.gradle  gen.sh
common/: build.gradle
communication/: DummyService.thrift  build.gradle
communication-api/: CommunicationDTOs.thrift  MetaService.thrift  TicketService.thrift  build.gradle  gen.sh
configuration/: build.gradle
def-shell/: build.gradle
demo-routines/: build.gradle
domain/: build.gradle
dto-cache/: build.gradle
execlogic/: build.gradle
execlogic-api/: ExecLogicService.thrift  build.gradle  gen.bat  gen.sh
library-admin-api/: LibraryAdminService.thrift  build.gradle
library-api/: LibraryService.thrift  build.gradle
local-simulator/: build.gradle
logging/: build.gradle
manager-api/: AuthService.thrift  ManagerService.thrift  build.gradle
manager-webapp/: build.gradle
manager-webmanager/: README.md  angular.json  package-lock.json  package.json
(+1423 files in other folders)
